Changed redis format and added thumbnail URL
