# swagger/swagger.yaml
@@ -1,6 +1,6 @@
 swagger: "2.0"
 info:
-  title: Video Conversion APIs
+  title: Tamland Video Conversion APIs
   description: Tamland Video Conversion System API Documentation
   version: '0.1.0'
 host: vod.taamland.ir
@@ -15,9 +15,16 @@ securityDefinitions:
     description: JWT token to authorize requests. Format should be 'Bearer {token}'
 security:
   - Bearer: []
+tags:
+  - name: "Conversion Operations"
+    description: "Operations related to video upload and conversion"
+  - name: "Get Metadata"
+    description: "Operations for getting videos metadata"
 paths:
   /startVideoConversion:
     post:
+      tags:
+        - "Conversion Operations"
       summary: Start Video Conversion
       description: For videos that are already present on the server, send video name (defaults to mp4 with no extension) to start the process
       parameters:
@@ -28,7 +35,7 @@ paths:
             properties:
               VideoName:
                 type: string
-                example: example_video.mp4
+                example: "Studio4_20250705_185325.mp4"
             required:
               - VideoName
       responses:
@@ -55,6 +62,8 @@ paths:
           description: Video not found
   /uploadVideo:
     post:
+      tags:
+        - "Conversion Operations"
       summary: Upload Video File Chunks
       description: Uploads a video file chunk by chunk using Dropzone.js.
       consumes:
@@ -99,17 +108,39 @@ paths:
           description: Chunk upload successful.
         500:
           description: Error saving file or size mismatch.
-  /getVideoList:
+  /getVideos:
     get:
-      summary: Get Video List
-      description: Get all videos details
+      tags:
+        - "Get Metadata"
+      summary: Get Videos List
       responses:
         200:
-          description: Successful
+          description: Successful response containing a list of video objects
+          schema:
+            type: array
+            items:
+              type: object
+              properties:
+                VideoName:
+                  type: string
+                VideoID:
+                  type: integer
+                  format: int64
+                thumbnail:
+                  type: string
+            example:
+              - VideoName: "Studio4_20250705_185325"
+                VideoID: 15
+                thumbnail: https://vod.taamland.ir/done/Studio4_20250705_185325/480_Studio4_20250705_185325.png
+              - VideoName: "Studio3_20260613_174319"
+                VideoID: 26
+                thumbnail: https://vod.taamland.ir/done/Studio3_20260613_174319/480_Studio3_20260613_174319.png
         500:
           description: Server error
   /getVideoProgress:
     get:
+      tags:
+        - "Conversion Operations"
       parameters:
         - name: body
           in: body
@@ -127,8 +158,8 @@ paths:
             required:
               - ConversionID
               - Quality
-      summary: Get Video List
-      description: Get all videos details
+      summary: Get conversion progress
+      description: Get a video conversion progress in percentile per conversionID and quality
       responses:
         200:
           description: returns conversion progress in percentages
